# claude-md-bench

./: .gitignore  README.md  pyproject.toml
docs/adr/: 001-html-dashboard-drawer.md
docs/features/01-html-dashboard/: README.md  phase-1-detailed-analysis.md
docs/features/02-audit-command/: README.md  phase-1-core-infrastructure.md  phase-2-reporter-methods.md  phase-3-html-template.md  phase-4-tests.md
docs/features/03-benchmark-suite/: README.md  phase-1-golden-files.md
docs/features/html-dashboard/: phase-2-drawer-component.md
docs/lessons-learned/: README.md
docs/lessons-learned/architecture/: 2025-11-23-typers-annotated-pattern.md
docs/lessons-learned/configuration/: 2025-11-23-pyprojecttoml-modern-features.md
docs/lessons-learned/testing/: 2025-11-23-modern-python-project-structure.md
docs/standards/: README.md
examples/anthropic-quickstart/: CLAUDE.optimized.v1.md
src/claude_md_bench/: __init__.py  cli.py
src/claude_md_bench/commands/: __init__.py  audit.py  compare.py  optimize.py
src/claude_md_bench/core/: __init__.py  analyzer.py  optimizer.py  reporter.py  reporting_constants.py
src/claude_md_bench/llm/: __init__.py  ollama.py
src/claude_md_bench/templates/: audit.html  comparison.html
tests/: __init__.py  conftest.py  test_analyzer.py  test_audit.py  test_cli.py  test_optimizer.py
