[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-md-bench"
version = "0.1.0"
description = "CLI tool for benchmarking and optimizing CLAUDE.md files"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "cskiro" }
]
keywords = [
    "claude",
    "llm",
    "benchmark",
    "optimization",
    "claude-md"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = [
    "typer[all]>=0.9.0",
    "requests>=2.31.0",
    "jinja2>=3.1.2",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "types-requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/cskiro/claude-md-bench"
Repository = "https://github.com/cskiro/claude-md-bench"
Issues = "https://github.com/cskiro/claude-md-bench/issues"

[project.scripts]
claude-md-bench = "claude_md_bench.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_md_bench"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.isort]
known-first-party = ["claude_md_bench"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/claude_md_bench"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
